--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,18 +68,20 @@ services:
 #        constraints:
 #          - node.hostname == ${HOSTNAME}
 
-# grafana:
-#   image: grafana/grafana
-#   depends_on:
-#     - prometheus
-#   ports:
-#     - 3000:3000
+  # default user name and password is 'admin'
+  grafana:
+    image: grafana/grafana
+    depends_on:
+      - prometheus
+    ports:
+      - 3000:3000
+    networks:
+      - back-tier
+
 #   volumes:
 #     - grafana_data:/var/lib/grafana
 #     - ./grafana/provisioning/:/etc/grafana/provisioning/
 #   env_file:
 #     - ./grafana/config.monitoring
-#   networks:
-#     - back-tier
 #     - front-tier
 #   restart: always
