--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,8 @@ services:
     image: grafana/grafana
     depends_on:
       - prometheus
+    volumes:
+      - ./grafana/provisioning/:/etc/grafana/provisioning/
     ports:
       - 3000:3000
     networks:
