add test for pushgateway

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,10 @@ services:
 
   node-exporter:
     image: prom/node-exporter
+    ports:
+      - 9100:9100
+    networks:
+      - back-tier
   #   volumes:
   #     - /proc:/host/proc:ro
   #     - /sys:/host/sys:ro
@@ -44,13 +48,16 @@ services:
   #     - '--path.sysfs=/host/sys'
   #     - --collector.filesystem.ignored-mount-points
   #     - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
-    ports:
-      - 9100:9100
-    networks:
-      - back-tier
   #   restart: always
   #   deploy:
   #     mode: global
+  pushgateway:
+    image: prom/pushgateway
+    ports:
+      - 9091:9091
+    networks:
+      - back-tier
+    
 
   alertmanager:
     image: prom/alertmanager
