--- a/prometheus/first_rules.yml
+++ b/prometheus/first_rules.yml
@@ -10,3 +10,6 @@ groups:
     annotations:
       summary: "Instance {{ $labels.instance }} down"
       description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 2 minutes."
+
+
+      # time() - push_time_seconds 
