--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -21,3 +21,7 @@ scrape_configs:
   - job_name: "node-exporter"
     static_configs:
       - targets: ["node-exporter:9100"]
+  - job_name: "pushgateway"
+    honor_labels: true
+    static_configs:
+      - targets: ["pushgateway:9091"]
